Fix oddities with footer spacing

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -104,8 +104,8 @@ ul.rs-list li {
 }
 
 .center {
-   line-height: 100px;
-   height: 100px;
+   line-height: 98px;
+   height: 98px;
    text-align: center;
 }
 
@@ -113,6 +113,7 @@ ul.rs-list li {
    line-height: 1.5;
    display: inline-block;
    vertical-align: middle;
+   margin-bottom: 0px;
 }
 
 .footer {
@@ -122,7 +123,7 @@ ul.rs-list li {
    right: 0;
    width: 100%;
    height: 100px;
-   padding: 1rem;
+   padding: 0px;
 }
 
 .footer p {
